--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,43 @@
-# Compiled class file
-*.class
+# gitignore template for Phoenix projects
+# website: http://www.phoenixframework.org/
+#
+# Recommended template: Elixir.gitignore
 
-# Log file
-*.log
+# Temporary files
+/tmp
 
-# BlueJ files
-*.ctxt
+# Static artifacts
+/node_modules
+/assets/node_modules
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Since we are building assets from web/static,
+# we ignore priv/static. You may want to comment
+# this depending on your deployment strategy.
+/priv/static/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Installer-related files
+/installer/_build
+/installer/tmp
+/installer/doc
+/installer/deps
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+
+## Zig
+# This file is for zig-specific build artifacts.
+# If you have OS-specific or editor-specific files to ignore,
+# such as *.swp or .DS_Store, put those in your global
+# ~/.gitignore and put this in your ~/.gitconfig:
+#
+# [core]
+#     excludesfile = ~/.gitignore
+#
+# Cheers!
+# -andrewrk
+
+.zig-cache/
+zig-out/
+/release/
+/debug/
+/build/
+/build-*/
+/docgen_tmp/
