--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,24 @@ zig-out/
 /build/
 /build-*/
 /docgen_tmp/
+
+
+#sqlite3
+*.db
+*.bat
+*.exp
+*.pdb
+*.dll
+*.a
+*.so
+*.db-shm
+*.db-wal
+package-lock.json
+*.sqlite
+node_modules/
+build/
+# C benchmark binary
+bench/bench
+deno.lock
+bun.lockb
+.DS_Store
