--- a/server/justfile
+++ b/server/justfile
@@ -25,7 +25,14 @@ clean:
 create-database:
   mix ecto.create
 
-create-migration table_name:
-  mix ecto.gen.migration {{table_name}}
+create-migration migration_name:
+  mix ecto.gen.migration {{migration_name}}
+
+run-migration-script:
+  mix ecto.migrate
+
+rollback-migration-script:
+  mix ecto.rollback
+
 
 
